--- a/project2/style.css
+++ b/project2/style.css
@@ -24,3 +24,19 @@ table{
     border: none;
     background-color: transparent;
 }
+#clear{
+    margin: 30px auto;
+    text-align: center;
+    padding: 5px;
+    width: 700px;
+    height: 50px;
+    background-color: bisque;
+    font-size: 30px;
+    border: 1px solid black;
+}
+.white{
+    background-color: white;
+}
+.black{
+    background-color: black;
+}
