--- a/project2/style.css
+++ b/project2/style.css
@@ -25,6 +25,7 @@ table{
     background-color: transparent;
 }
 #clear{
+    display: block;
     margin: 30px auto;
     text-align: center;
     padding: 5px;
