--- a/project2/style.css
+++ b/project2/style.css
@@ -37,7 +37,17 @@ table{
 }
 .white{
     background-color: white;
+    width: 30px;
+    height: 30px;
+    margin: 1px;
+    border-radius: 19px;
+    border: none;
 }
 .black{
     background-color: black;
+    width: 30px;
+    height: 30px;
+    margin: 1px;
+    border-radius: 19px;
+    border: none;
 }
