--- a/project2/style.css
+++ b/project2/style.css
@@ -39,7 +39,7 @@ hr{
 }
 
 .white{
-    background-color: rgb(215, 215, 215);
+    background-color: rgb(220, 220, 220);
     width: 30px;
     height: 30px;
     margin: 1px;
@@ -48,7 +48,7 @@ hr{
    
 }
 .black{
-    background-color: grey;
+    background-color: rgb(95, 95, 95);
     width: 30px;
     height: 30px;
     margin: 1px;
@@ -317,4 +317,53 @@ height: 40px;
     -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 1);
     -moz-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 1);
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 1);   
+}
+
+#alert{
+    position: fixed;
+    width:300px;
+    height: 300px;
+    background-color: white;
+    border: 1.5px solid black;
+    border-radius: 25px;
+    top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 1);
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 1);  
+}
+#new_game{
+    border-radius: 25px;
+    font-family: 'Ubuntu', sans-serif;
+    display: block;
+    margin: 30px auto;
+    text-align: center;
+    padding: 5px;
+    width: 200px;
+    height: 50px;
+    background-color: white;
+    font-size: 20px;
+    border: 1.5px solid black;
+    
+}
+#new_game:active{
+    width: 220px;
+    height: 60px; 
+    border-radius: 30px;
+    font-size: 25px;
+}
+#text{
+    display: block;
+    width: 200px;
+    height: 100px;
+    margin: 50px auto;
+    font-size: 25px;
+    text-align: center;
+}
+.alert{
+    display: none;
+}
+.alert_display{
+    display:block
 }
