--- a/IA/style.css
+++ b/IA/style.css
@@ -6,7 +6,6 @@ body{
 position: absolute;
 top: 0;
 left: 0;
-height: 100%;
 width: 100%;
 margin: 0;
 padding: 0;
@@ -15,6 +14,7 @@ padding: 0;
 #home_img{
     width: 100%;
     margin: 0;
+    position: relative;
 }
 #h_image{
     width: 100%;
@@ -35,18 +35,21 @@ padding: 0;
    width: 100%;
    height: 70px;
    background-color: #f0efeb;
+   color: black;
    opacity: 40%; 
    display: flex;
    flex-wrap: nowrap;
     flex-direction: row;
     align-content: center;
     justify-content: flex-end;
-    align-items: center;
+    align-items: center; 
 }
+    
 .header{
     margin: 15px;
-    font-size: 25px;
-    
+    font-size: 25px; 
+    text-decoration: none;
+    color: black;
 }
 .header1{
     position: absolute;
@@ -56,3 +59,39 @@ padding: 0;
 }
 
 
+  
+ 
+.dropdown {
+    position: relative;
+    display: inline-block;
+    
+}
+  
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color:#f0efeb;
+    min-width: 140px;
+    border-radius: 7px;
+    z-index: 1;
+}
+  
+
+.dropdown-content a {
+    color: black;
+    font-size: 20px;
+    padding: 12px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    border-radius: 7px;
+}
+  
+
+.dropdown-content a:hover {color:black; background-color: #d2d1cc;}
+  
+
+.dropdown:hover .dropdown-content {display: block;}
+  
+  
